--- a/pom.xml
+++ b/pom.xml
@@ -29,24 +29,22 @@
 	</dependency>
   </dependencies>
   <build>
-     <plugins>
-    	 <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
+  	<plugins>
+    	<plugin>
+        	<groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
             <version>2.3</version>
             <executions>
                 <execution>
                     <phase>package</phase>
-                    <goals>
-                        <goal>copy</goal>
-                    </goals>
+                    <goals><goal>copy</goal></goals>
                     <configuration>
                         <artifactItems>
                             <artifactItem>
-                                <groupId>org.mortbay.jetty</groupId>
-                                <artifactId>jetty-runner</artifactId>
-                                <version>7.5.3.v20111011</version>
-                                <destFileName>jetty-runner.jar</destFileName>
+                                <groupId>com.github.jsimone</groupId>
+                                <artifactId>webapp-runner</artifactId>
+                                <version>8.0.30.2</version>
+                                <destFileName>webapp-runner.jar</destFileName>
                             </artifactItem>
                         </artifactItems>
                     </configuration>
@@ -55,4 +53,5 @@
         </plugin>
     </plugins>
   </build>
+  <name>Test Web Application</name>
 </project>
