--- a/pom.xml
+++ b/pom.xml
@@ -27,13 +27,24 @@
     	<artifactId>org.eclipse.persistence.jpa</artifactId>
     	<version>2.5.2</version>
 	</dependency>
+	<dependency>
+    	<groupId>org.apache.maven.plugins</groupId>
+    	<artifactId>maven-war-plugin</artifactId>
+    	<version>2.6</version>
+	</dependency>	
   </dependencies>
   <build>
   	<plugins>
-    	<plugin>
-        	<groupId>org.apache.maven.plugins</groupId>
+  	<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
+		<plugin>
+    		<groupId>org.apache.maven.plugins</groupId>
+    		<artifactId>maven-war-plugin</artifactId>
+    		<version>2.6</version>
+		</plugin>
+  	   	<plugin>
+           	<groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
-            <version>2.3</version>
+            <version>2.10</version>
             <executions>
                 <execution>
                     <phase>package</phase>
