--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,63 @@
   <artifactId>applicant-view</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  
+  <name>Test Web Application</name>
   <description>Test Web Application</description>
+  
+  <build>
+  	<sourceDirectory>src</sourceDirectory>
+  	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.5.1</version>
+			<configuration>
+				<source>1.8</source>
+				<target>1.8</target>
+			</configuration>
+		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-war-plugin</artifactId>
+			<version>2.6</version>
+			<configuration>
+				<webResources>
+                	<resource>
+                    	<directory>src/META-INF</directory>
+                    	<targetPath>WEB-INF/classes/META-INF</targetPath>
+                    </resource>
+                </webResources>
+				<warSourceDirectory>WebContent</warSourceDirectory>
+				<webXml>WebContent\WEB-INF\web.xml</webXml>
+				<failOnMissingWebXml>false</failOnMissingWebXml>
+			</configuration>
+		</plugin>
+		<plugin>
+           	<groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.10</version>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                    	<goal>copy</goal>
+                    </goals>
+                    <configuration>
+                        <artifactItems>
+                            <artifactItem>
+                                <groupId>com.github.jsimone</groupId>
+                                <artifactId>webapp-runner</artifactId>
+                                <version>8.0.30.2</version>
+                                <destFileName>webapp-runner.jar</destFileName>
+                            </artifactItem>
+                        </artifactItems>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+	</plugins>
+  </build>
   <dependencies>
     <dependency>
   		<groupId>javax.ws.rs</groupId>
@@ -21,51 +77,10 @@
   		<artifactId>postgresql</artifactId>
   		<version>9.4-1201-jdbc41</version>
   	</dependency>
-  	<!-- https://mvnrepository.com/artifact/org.eclipse.persistence/org.eclipse.persistence.jpa -->
-	<dependency>
+  	<dependency>
     	<groupId>org.eclipse.persistence</groupId>
     	<artifactId>org.eclipse.persistence.jpa</artifactId>
     	<version>2.5.2</version>
 	</dependency>
-	<dependency>
-    	<groupId>org.apache.maven.plugins</groupId>
-    	<artifactId>maven-war-plugin</artifactId>
-    	<version>2.6</version>
-	</dependency>	
   </dependencies>
-  <build>
-  	<plugins>
-  	<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
-		<plugin>
-    		<groupId>org.apache.maven.plugins</groupId>
-    		<artifactId>maven-war-plugin</artifactId>
-    		<version>2.6</version>
-    		<configuration>
-    			<webXml>WebContent\WEB-INF\web.xml</webXml>
-    		</configuration>
-		</plugin>
-  	   	<plugin>
-           	<groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <version>2.10</version>
-            <executions>
-                <execution>
-                    <phase>package</phase>
-                    <goals><goal>copy</goal></goals>
-                    <configuration>
-                        <artifactItems>
-                            <artifactItem>
-                                <groupId>com.github.jsimone</groupId>
-                                <artifactId>webapp-runner</artifactId>
-                                <version>8.0.30.2</version>
-                                <destFileName>webapp-runner.jar</destFileName>
-                            </artifactItem>
-                        </artifactItems>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
-    </plugins>
-  </build>
-  <name>Test Web Application</name>
 </project>
