--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -11,6 +11,6 @@
       <param-name>javax.ws.rs.Application</param-name>
       <param-value>com.applicant.webapp.WebApplication</param-value>
     </init-param>
-    <load-on-startup>1</load-on-startup>
+    <!-- <load-on-startup>1</load-on-startup> -->
   </servlet>
 </web-app>
